--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typecheck:user": "pnpm -F o2o-user typecheck",
     "typecheck:owner": "pnpm -F o2o-owner typecheck",
     "lint:check": "biome check apps/user/src apps/owner/src",
-    "lint:fix": "biome check apps/user/src apps/owner/src --write"
+    "lint:fix": "biome check apps/user/src apps/owner/src --write",
+    "lint-staged": "node lint-staged.config.js"
   },
   "dependencies": {
     "@actions/github": "^6.0.0",
@@ -58,8 +59,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.10.0",
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,md}": ["biome check --write --no-errors-on-unmatched"]
-  }
+  "packageManager": "pnpm@10.10.0"
 }
