--- a/.github/workflows/pr-init.yml
+++ b/.github/workflows/pr-init.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Assign PR author
         uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.GH_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN  }}
           script: |
             await github.rest.issues.addAssignees({
               owner: context.repo.owner,
