--- a/apps/owner/package.json
+++ b/apps/owner/package.json
@@ -4,14 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:local": "dotenv -e .env.local -- next dev --turbopack",
+    "dev:prod": "dotenv -e .env.production -- next dev",
     "build": "next build",
     "start": "next start",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "typecheck": "tsc --noEmit",
-    "lint": "biome check .",
-    "lint:check": "biome check src"
+    "test": "vitest run"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.2",
