--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -8,12 +8,7 @@
     "dev:prod": "dotenv -e .env.production -- next dev",
     "build": "next build",
     "start": "next start",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "typecheck": "tsc --noEmit",
-    "lint": "biome check .",
-    "lint:check": "biome check src"
+    "test": "vitest run"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.74.7",
@@ -44,7 +39,6 @@
     "@vanilla-extract/vite-plugin": "^5.0.1",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/coverage-v8": "^3.1.3",
-    "dotenv-cli": "^8.0.0",
     "jsdom": "^26.1.0",
     "msw": "^2.7.5",
     "ts-node": "^10.9.2",
