--- a/package.json
+++ b/package.json
@@ -17,12 +17,6 @@
     "test": "pnpm -r test",
     "test:user": "pnpm -F o2o-user test",
     "test:owner": "pnpm -F o2o-owner test",
-    "test:coverage": "pnpm -r test:coverage",
-    "typecheck": "pnpm -r typecheck",
-    "typecheck:user": "pnpm -F o2o-user typecheck",
-    "typecheck:owner": "pnpm -F o2o-owner typecheck",
-    "lint:check": "biome check apps/user/src apps/owner/src",
-    "lint:fix": "biome check apps/user/src apps/owner/src --write",
     "lint-staged": "node lint-staged.config.js"
   },
   "dependencies": {
@@ -54,7 +48,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.3"
+    "vitest": "^3.1.3",
+    "dotenv-cli": "^8.0.0"
   },
   "keywords": [],
   "author": "",
